Refactoring: Use Sealed in Field interface Remove Properties Move Field in fields package.